--- a/sections/collection-body.liquid
+++ b/sections/collection-body.liquid
@@ -356,9 +356,9 @@
                         <div class="{{ control_grid[0] }} d-lg-flex align-items-center">
                             {%- if settings.collection_show_sidebar != 'hide' -%}
                                 <div class="{% if mobile_need_button == true %}d-flex{% else %}d-none{% endif %}{% if desktop_need_button == true and settings.collection_sidebar_position != 'top' %} d-lg-flex{% else %} d-lg-none{% endif %} mr-30">
+                                    <i class="mr-5">{% render 'icon-theme-192' %}</i>
                                     <div class="collection-control__button-sidebar d-flex align-items-center cursor-pointer js-popup-button" data-js-popup-button="sidebar">
                                         {{ 'collections.control.button_sidebar' | t }}
-                                        <i class="ml-5">{% render 'icon-theme-188' %}</i>
                                     </div>
                                 </div>
                                 {%- if settings.collection_sidebar_position == 'top' -%}
