--- a/snippets/collection-filters-pagination.liquid
+++ b/snippets/collection-filters-pagination.liquid
@@ -73,7 +73,7 @@
                       <a href="{{ paginate_url }}{% if page != 1 %}pg_:{{ page }}{{ paginate_sort_by_url }}{{ paginate_view_url }}{% endif %}" data-value="{{ page }}">{{ page }}</a>
                     </span>
                 {%- else -%}
-                    <span class="pagination__page current px-7">
+                    <span class="pagination__page current px-4 mx-4">
                       {{ page }}
                     </span>
                 {%- endif -%}
