--- a/snippets/product-page-get-info.liquid
+++ b/snippets/product-page-get-info.liquid
@@ -847,7 +847,7 @@
                 {%- endif -%}
                 {%- if show_vendor -%}
                     <div class="product-page-info__vendor{% if vendor == blank %} d-none-important{% endif %} mb-5">
-                        <p class="m-0" data-js-product-vendor><span>{{ vendor }}</span></p>
+                        <p class="m-0" data-js-product-vendor><a href="/collections/vendors?q={{ vendor }}">{{ vendor }}</a></p>
                     </div>
                 {%- endif -%}
             </div>
