Modified Home setting and Collection View

--- a/sections/home-builder.liquid
+++ b/sections/home-builder.liquid
@@ -768,7 +768,7 @@
 },
 {
 "value": "type-2-3",
-"label": "Type #2 v3 (Type 2 with Button)"
+"label": "Type #2 v3 (Text next the image)"
 },
 {
 "value": "type-2-4",
