--- a/snippets/product-page-get-info.liquid
+++ b/snippets/product-page-get-info.liquid
@@ -178,7 +178,7 @@
                 {%- endif -%}
                 {%- if show_vendor -%}
                     <div class="product-page-info__vendor{% if vendor == blank %} d-none-important{% endif %} mb-5">
-                        p class="m-0" data-js-product-vendor><span>{{ vendor }}</span></p>
+                        <p class="m-0" data-js-product-vendor><span>{{ vendor }}</span></p>
                     </div>
                 {%- endif -%}
             </div>
@@ -1057,7 +1057,7 @@
                 {%- endif -%}
                 {%- if show_vendor -%}
                     <div class="product-page-info__vendor{% if vendor == blank %} d-none-important{% endif %} mb-5">
-                        <<p class="m-0" data-js-product-vendor>{{vendor | link_to_vendor}}</p>
+                        <p class="m-0" data-js-product-vendor>{{vendor | link_to_vendor}}</p>
                     </div>
                 {%- endif -%}
             </div>
