footer color change

--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -9,7 +9,7 @@ $font-serif: adobe-garamond-pro, serif;
 
 // Color Setting
 $color-theme-default: #141414;
-$color-blancsom-base: #f6f9f9; // previous: #416341
+$color-blancsom-base: #899a9a; // previous: #416341
 $color-background-lite: lighten($color-blancsom-base, 65); // previous: #f6f8f6
 $color-background-dark: darken($color-blancsom-base, 15); // previous: #233523
 $color-background-lite-darken: desaturate(darken($color-background-lite, 9), 6);
