--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -89,6 +89,8 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
     li {
       text-transform: uppercase;
       letter-spacing: $spacing;
+      // custom
+      font-size: 0.7rem;
     }
   }
   }
@@ -477,7 +479,7 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
       text-align: center;
     }
   }
-}
+  }
 // Footer 
 .footer--style-blancsom {
   background-color: $color-background-lite;
