--- a/assets/blancsom.scss
+++ b/assets/blancsom.scss
@@ -31,7 +31,7 @@ $screen-lg-up: 1025px;
 $screen-xl-up: 1260px;
 
 // Logo size Setting
-$mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
+$mobile-logo-width-half: "75px";
 
 .blancsom-theme {
   // General
