--- a/assets/blancsom.scss.liquid
+++ b/assets/blancsom.scss.liquid
@@ -472,7 +472,7 @@ $mobile-logo-width-half: "{{settings.logo_mobile_width | divided_by: 2}}px";
   }
 
   // Footer
-  .footer--style-blancsom {
+  .footer--style-blancsom1 {
     background-color: $color-background-lite;
     h5 {
       font-size: 0.8rem;
