--- a/assets/blancsom.scss
+++ b/assets/blancsom.scss
@@ -472,7 +472,7 @@ $mobile-logo-width-half: "75px";
   }
 
   // Footer
-  .footer--style-blancsom {
+  .footer--style-blancsom1 {
     background-color: $color-background-lite;
     h5 {
       font-size: 0.8rem;
